# OP2_HPX

./: Motivations.docx  ~$tivations.docx
Code/: O1.cpp  O1_f.cpp  OP2_OpenMP.cpp  OP_DataFlow1.cpp  OP_OverFlow1.cpp  OP_Sync1.cpp  TAILQ.cpp  main_cp_hpx.cpp  op_par_loop hpx.cpp  op_par_loop.cpp  op_par_loop_kernel_hpx.cpp  openmp_code_generator.py  openmp_code_generator_HPX.py
Code/codes to be replaced/: CMakeLists.txt  airfoil_op.cpp
For Print/: adt_calc_kernel.cpp  airfoil_op.cpp  save_soln_kernel.cpp
OP2_Docs/: mpi-dev.tex
OP2_Projects/: OP2.txt
OP2_Projects/CodeGenerator/CodeGenerator_async/: CMakeLists.txt  airfoil.cpp  op2_gen_cuda.py  op2_gen_openmp_simple.py  op2_gen_seq.py  op_seq.h
OP2_Projects/CodeGenerator/CodeGenerator_dataflow/: airfoil.cpp  op2.py  op2_gen_cuda.py  op2_gen_cuda_simple.py  op2_gen_cuda_simple_hyb.py  op2_gen_mpi_vec.py  op2_gen_openmp.py  op2_gen_openmp_simple.py  op2_gen_seq.py  save_soln.h
OP2_Projects/CodeGenerator/CodeGenerator_parallel_for_each/: CMakeLists.txt  adt_calc_kernel.cpp  airfoil_op.cpp  bres_calc_kernel.cpp  op2_gen_openmp.py  op2_gen_openmp_simple.py  op2_gen_seq.py
OP2_Projects/CodeGenerator_async/: op2.py  op2_gen_cuda_simple.py  op2_gen_cuda_simple_hyb.py  op2_gen_mpi_vec.py  op2_gen_openmp.py  op2_gen_openmp_simple.py  op2_gen_seq.py
OP2_Projects/Example_without_HPX/: Makefile  airfoil.cpp  airfoil_mpi_op.cpp  airfoil_seq  op_lib_c.h
OP2_Projects/FirstHPX/: CMakeLists.txt  CMakeLists_Old.txt  airfoil_op.cpp  cmake_install.cmake
OP2_Projects/MPI/: IncludedInJustMPI.cpp  airfoil_mpi_op.cpp  airfoil_op.cpp
OP2_Projects/Op2WithHPX/CodeGenerator/: op2_gen_cuda_simple.py  op2_gen_openmp_simple.py  op2_gen_seq.py  op2_seq_gen.py
OP2_Projects/Op2WithHPX/OP2_ModifiedAPI/: adt_calc_kernel.cpp  airfoil_op.cpp  bres_calc_kernel.cpp  bres_calc_seqkernel.cpp  op2_gen_openmp.py  op2_gen_seq.py  op_lib_core1.cpp  res_calc.h  res_calc_kernel.cpp  res_calc_seqkernel.cpp  update_kernel1.cpp
OP2_Projects/Op2WithHPX/OP2_ModifiedAPI/API/: op_openmp_decl.c  op_rt_support.c  op_rt_support.h
OP2_Projects/Op2WithHPX/OP2_ModifiedAPI2/: adt_calc.h  adt_calc_cpu_kernel.cpp  adt_calc_kernel.cpp  airfoil.cpp  airfoil_op.cpp  airfoil_seqkernels.cpp  bres_calc.h  bres_calc_kernel.cpp  common.cmake  op_openmp_decl.c  op_rt_support.c  op_rt_support.h  op_seq.h  res_calc.h  res_calc_cpu_kernel.cpp  res_calc_kernel.cpp  save_soln_cpu_kernel.cpp  update2.h  update_cpu_kernel.cpp  update_kernel2.cpp  update_seqkernel.cpp
OP2_Projects/Op2WithHPX/Project1/: CMakeLists.txt  adt_calc.h  adt_calc_kernel.cpp  airfoil_kernels.cpp  airfoil_op.cpp  res_calc_kernel.cpp  save_soln.h  update1.h  update_kernel1.cpp  update_kernel2.cpp
OP2_Projects/Op2WithHPX/airfoil_dataflow_par/: CMakeLists.txt  adt_calc_kernel.cpp  adt_calc_seqkernel.cpp  airfoil_op.cpp  bres_calc.h  bres_calc_kernel.cpp  res_calc_kernel.cpp  save_soln_kernel.cpp  save_soln_seqkernel.cpp  update_kernel.cpp
OP2_Projects/Op2WithHPX/airfoil_dataflow_par_main/: adt_calc_kernel.cpp  airfoil_op.cpp  bres_calc_cpu_kernel.cpp  bres_calc_kernel.cpp  res_calc_kernel.cpp  save_soln_kernel.cpp  update_kernel.cpp
OP2_Projects/Op2WithHPX/airfoil_hpx_async/: adt_calc_cpu_kernel.cpp  adt_calc_kernel.cpp  adt_calc_seqkernel.cpp  airfoil.cpp  airfoil_op.cpp  airfoil_seqkernels.cpp  bres_calc_cpu_kernel.cpp  bres_calc_kernel.cpp  bres_calc_seqkernel.cpp  op2.py  op2_gen_openmp.py  res_calc_cpu_kernel.cpp  res_calc_kernel.cpp  res_calc_seqkernel.cpp  save_soln_cpu_kernel.cpp  save_soln_kernel.cpp  save_soln_seqkernel.cpp  update_cpu_kernel.cpp  update_kernel.cpp  update_seqkernel.cpp
OP2_Projects/Op2WithHPX/airfoil_hpx_mpi/: airfoil_mpi.cpp  airfoil_mpi_op.cpp  airfoil_mpi_seqkernels.cpp  main.cpp  op_mpi_hdf5.c  op_rt_support.h
OP2_Projects/Op2WithHPX/airfoil_hpx_parallel_for_each/: res_calc_kernel.cpp  save_soln_kernel.cpp  update_kernel.cpp
OP2_Projects/Second/: CMakeCache.txt  CMakeLists.txt  Makefile  OldMakeFile  adt_calc_kernel.cpp  airfoil_mpi.cpp  save_soln_kernel.cpp  update_kernel.cpp
OP2_Projects/SecondHPX/: CMakeLists.txt  Makefile  airfoil_op.cpp  save_soln.h  save_soln_kernel.cpp
OP2_Projects/airfoil_hpx_async/: adt_calc_kernel.cpp  op_lib_cpp.h  res_calc_kernel.cpp  save_soln_kernel.cpp
OP2_Projects/airfoil_hpx_mpi/: CMakeLists.txt  adt_calc_kernel.cpp  airfoil_op.cpp  bres_calc_kernel.cpp  op_lib_mpi.h  op_mpi_core.c  save_soln_kernel.cpp  test.cpp  update_kernel.cpp
OP2_Projects/cmake/: CMakeLists.txt  CMakeLists1.txt
OP2_Projects/codes to be replaced/: CMakeLists.txt  op_seq.h
OP2_Projects/future_arg/: airfoil.cpp  airfoil2.cpp  airfoil3.cpp  op_arg_dat_core.cpp  op_arg_dat_core2.cpp  op_lib_core.h.cpp
Reports/R5/: P1.pptx  References.bib  Report5.aux  Report5.bbl  Report5.blg  Report5.tex  TeXShop.plist  scala13.tex
Reports/R5/Pictures/: adt_calc_kernel_1.cpp  adt_calc_kernel_2.cpp  main_1.cpp  main_2.cpp
Second/: airfoil_op.cpp  bres_calc_kernel.cpp  res_calc_kernel.cpp  save_soln_kernel.cpp
